--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamer Zone</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
+
 <body>
     <!-- header section starts here  -->
     <header>
-
+        <nav class="nav-container">
+            <div class="nav-logo-container flex">
+                <img src="./assets/images/Frame.png" alt="">
+                <h2><span class="primary-color">G</span>amer</h2>
+            </div>
+            <div class="menu-container flex">
+                <ul class="flex">
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Games</a></li>
+                </ul>
+                <div class="follow-section">
+                    <p>Follow Us On <a href=""><i class="fa-brands fa-youtube"></i></a><a href=""><i class="fa-brands fa-tiktok"></i></a></p>
+                </div>
+            </div>
+        </nav>
     </header>
     <!-- main section starts here  -->
     <main>
@@ -18,7 +35,8 @@
     </main>
     <!-- footer section starts here  -->
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
