banner section finished

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
             <div class="menu-container flex">
                 <ul class="flex">
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Games</a></li>
+                    <li><a class="list-none" href="">About Us</a></li>
+                    <li><a class="list-none" href="">Games</a></li>
                 </ul>
                 <div class="follow-section">
                     <p>Follow Us On <a href=""><i class="fa-brands fa-youtube"></i></a><a href=""><i class="fa-brands fa-tiktok"></i></a></p>
@@ -31,6 +31,23 @@
     </header>
     <!-- main section starts here  -->
     <main>
+        <!-- banner section starts here  -->
+        <section class="banner">
+            <div class="banner-content">
+                <h2>Play Like The</h2>
+                <h1>G.O.A.T.</h1>
+                <ul>
+                    <li class="list-none"><i class="fa-regular fa-circle-play"></i> 1-Click instant play</li>
+                    <li class="list-none"><i class="fa-solid fa-download"></i> No Download</li>
+                    <li class="list-none"><i class="fa-solid fa-user-group"></i> 1000s of supported online games</li>
+                </ul>
+                <button class="primary-btn">Sign In</button>
+                <button class="primary-btn banner-btn">Go Rogue</button>
+            </div>
+            <div class="banner-img">
+                <img src="./assets/images/Group 18.png" alt="">
+            </div>
+        </section>
 
     </main>
     <!-- footer section starts here  -->
