--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <li><a class="list-none" href="">Games</a></li>
                 </ul>
                 <div class="follow-section">
-                    <p>Follow Us On <a href=""><i class="fa-brands fa-youtube"></i></a><a href=""><i class="fa-brands fa-tiktok"></i></a></p>
+                    <p>Follow Us On <a href=""><i class="fa-brands fa-youtube"></i></a><a href=""><i
+                                class="fa-brands fa-tiktok"></i></a></p>
                 </div>
             </div>
         </nav>
@@ -48,7 +49,31 @@
                 <img src="./assets/images/Group 18.png" alt="">
             </div>
         </section>
-
+        <!-- online games section starts here  -->
+        <section class="online-games">
+            <div class="online-games-content">
+                <h2 class="section-title">Online Games <span class="section-highlight">Funny Videos</span></h2>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="videos-card-container flex">
+                <div class="videos-card">
+                    <img src="./assets/images/Rectangle 4.png" alt="">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="videos-card">
+                    <img src="./assets/images/Rectangle 5.png" alt="">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="videos-card">
+                    <img src="./assets/images/Rectangle 7.png" alt="">
+                    <p>Breaking game records <br> like OG</p>
+                </div>
+                <div class="videos-card">
+                    <img src="./assets/images/Rectangle 6.png" alt="">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer section starts here  -->
     <footer>
