--- a/index.html
+++ b/index.html
@@ -74,6 +74,19 @@
                 </div>
             </div>
         </section>
+        <!-- play games section starts here  -->
+        <section class="play-games">
+            <div class="play-img-container">
+                <img src="./assets/images/Rectangle 67.png" alt="">
+                <div class="secondary-img">
+                    <img src="./assets/images/Rectangle 78.png" alt="">
+                </div>
+            </div>
+            <div class="play-games-content">
+                <h2 class="section-title"><span class="section-highlight">Play Games <br> Online</span> Anywhere, <br>Anytime!</h2>
+                <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+            </div>
+        </section>
     </main>
     <!-- footer section starts here  -->
     <footer>
