game category section finished

--- a/index.html
+++ b/index.html
@@ -83,8 +83,50 @@
                 </div>
             </div>
             <div class="play-games-content">
-                <h2 class="section-title"><span class="section-highlight">Play Games <br> Online</span> Anywhere, <br>Anytime!</h2>
-                <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+                <h2 class="section-title"><span class="section-highlight">Play Games <br> Online</span> Anywhere,
+                    <br>Anytime!
+                </h2>
+                <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online
+                    for free, any time, anywhere , on any device.</p>
+            </div>
+        </section>
+        <!-- games category section starts here  -->
+        <section class="games-category flex">
+            <div class="category-container flex">
+                <img src="./assets/images/Rectangle 11.png" alt="">
+                <p class="category-name">Action Games</p>
+            </div>
+            <div class="category-container flex">
+                <img src="./assets/images/Rectangle 12.png" alt="">
+                <p class="category-name">Adventure Games</p>
+            </div>
+            <div class="category-container flex">
+                <img src="./assets/images/Rectangle 13.png" alt="">
+                <p class="category-name">Arcade Games</p>
+            </div>
+            <div class="category-container flex">
+                <img src="./assets/images/Rectangle 14.png" alt="">
+                <p class="category-name">Educational Games</p>
+            </div>
+            <div class="category-container flex">
+                <img src="./assets/images/Rectangle 15.png" alt="">
+                <p class="category-name">Word Games</p>
+            </div>
+            <div class="category-container flex">
+                <img src="./assets/images/Rectangle 16.png" alt="">
+                <p class="category-name">Role Palying Games</p>
+            </div>
+            <div class="category-container flex">
+                <img src="./assets/images/Rectangle 17.png" alt="">
+                <p class="category-name">Music & Audio Games</p>
+            </div>
+            <div class="category-container flex">
+                <img src="./assets/images/Rectangle 18.png" alt="">
+                <p class="category-name">Puzzle Games</p>
+            </div>
+            <div class="category-container flex">
+                <img src="./assets/images/Rectangle 19.png" alt="">
+                <p class="category-name">Strategy Games</p>
             </div>
         </section>
     </main>
