--- a/index.html
+++ b/index.html
@@ -132,7 +132,32 @@
     </main>
     <!-- footer section starts here  -->
     <footer>
-
+        <div class="footer-logo flex">
+            <img src="./assets/images/Frame.png" alt="">
+            <h2><span class="primary-color">G</span>amer</h2>
+        </div>
+        <div class="quick-links">
+            <ul class="flex">
+                <li class="list-none"><a href="">Our Story</a></li>
+                <li class="list-none"><a href="">Games</a></li>
+                <li class="list-none"><a href="">Web Games</a></li>
+                <li class="list-none"><a href="">Careers</a></li>
+                <li class="list-none"><a href="">Support</a></li>
+                <li class="list-none"><a href="">My Account</a></li>
+            </ul>
+        </div>
+        <div class="social-links">
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div class="policy">
+            <a href="">Terms and Conditions</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Cookie Policy</a>
+            <a href="">Privacy Settings</a>
+        </div>
+        <p class="footer-description">Play Games &commat; Gamer &commat; 2000-2023 Gamer Bangladesh</p>
     </footer>
 </body>
 
