footer responsive finished

--- a/index.html
+++ b/index.html
@@ -152,10 +152,12 @@
             <a href=""><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div class="policy">
-            <a href="">Terms and Conditions</a>
-            <a href="">Privacy Policy</a>
-            <a href="">Cookie Policy</a>
-            <a href="">Privacy Settings</a>
+            <ul class="flex">
+                <li class="list-none"><a href="">Terms and Conditions</a></li>
+                <li class="list-none"><a href="">Privacy Policy</a></li>
+                <li class="list-none"><a href="">Cookie Policy</a></li>
+                <li class="list-none"><a href="">Privacy Settings</a></li>
+            </ul>
         </div>
         <p class="footer-description">Play Games &commat; Gamer &commat; 2000-2023 Gamer Bangladesh</p>
     </footer>
