play games section updated

--- a/index.html
+++ b/index.html
@@ -77,10 +77,8 @@
         <!-- play games section starts here  -->
         <section class="play-games">
             <div class="play-img-container">
-                <img src="./assets/images/Rectangle 67.png" alt="">
-                <div class="secondary-img">
-                    <img src="./assets/images/Rectangle 78.png" alt="">
-                </div>
+                <img class="main-img" src="./assets/images/Rectangle 67.png" alt="">
+                <img class="secondary-img" src="./assets/images/Rectangle 78.png" alt="">
             </div>
             <div class="play-games-content">
                 <h2 class="section-title"><span class="section-highlight">Play Games <br> Online</span> Anywhere,
