overlay added for online game section

--- a/index.html
+++ b/index.html
@@ -58,19 +58,43 @@
             </div>
             <div class="videos-card-container flex">
                 <div class="videos-card">
-                    <img src="./assets/images/Rectangle 4.png" alt="">
+                    <div class="card-img-container">
+                        <img src="./assets/images/Rectangle 4.png" alt="">
+                        <div class="overlay">
+                            <span class="overlay-icon"><i class="fa-solid fa-circle-play"></i></span>
+                            <span class="overlay-text">Watch Now</span>
+                        </div>
+                    </div>
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
                 <div class="videos-card">
-                    <img src="./assets/images/Rectangle 5.png" alt="">
+                    <div class="card-img-container">
+                        <img src="./assets/images/Rectangle 5.png" alt="">
+                        <div class="overlay">
+                            <span class="overlay-icon"><i class="fa-solid fa-circle-play"></i></span>
+                            <span class="overlay-text">Watch Now</span>
+                        </div>
+                    </div>
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="videos-card">
-                    <img src="./assets/images/Rectangle 7.png" alt="">
+                    <div class="card-img-container">
+                        <img src="./assets/images/Rectangle 7.png" alt="">
+                        <div class="overlay">
+                            <span class="overlay-icon"><i class="fa-solid fa-circle-play"></i></span>
+                            <span class="overlay-text">Watch Now</span>
+                        </div>
+                    </div>
                     <p>Breaking game records <br> like OG</p>
                 </div>
                 <div class="videos-card">
-                    <img src="./assets/images/Rectangle 6.png" alt="">
+                    <div class="card-img-container">
+                        <img src="./assets/images/Rectangle 6.png" alt="">
+                        <div class="overlay">
+                            <span class="overlay-icon"><i class="fa-solid fa-circle-play"></i></span>
+                            <span class="overlay-text">Watch Now</span>
+                        </div>
+                    </div>
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>
             </div>
