--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="category-container flex">
                 <img src="./assets/images/Rectangle 16.png" alt="">
-                <p class="category-name">Role Palying Games</p>
+                <p class="category-name">Role Playing Games</p>
             </div>
             <div class="category-container flex">
                 <img src="./assets/images/Rectangle 17.png" alt="">
